fix calendar announcements on week view getting covered up by events

--- a/app/calendar/CalendarWeek.styl
+++ b/app/calendar/CalendarWeek.styl
@@ -14,7 +14,7 @@
 		position: absolute
 		top: 0
 		width: 100%
-		z-index: 2
-	
+		z-index: 3
+
 	.calendarWeekEventsContainer
 		overflow-y: scroll
