--- a/app/calendar/CalendarWeekDay.styl
+++ b/app/calendar/CalendarWeekDay.styl
@@ -25,7 +25,6 @@
 		top: 5px
 		left: -1px
 		width: calc(100% + 1px)
-		z-index: 2
 		
 	.calendarWeekDayEvents
 		position: relative
